--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "karma": "^4.4.1"
+    "jasmine-core": "^3.5.0",
+    "karma": "^4.4.1",
+    "karma-firefox-launcher": "^1.2.0",
+    "karma-jasmine": "^2.0.1"
   }
 }
