--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jasmine-core": "^3.5.0",
     "karma": "^4.4.1",
     "karma-firefox-launcher": "^1.2.0",
+    "karma-html2js-preprocessor": "^1.1.0",
     "karma-jasmine": "^2.0.1"
   }
 }
