--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
+    "grunt-karma": "^3.0.2",
     "jasmine-core": "^3.5.0",
     "karma": "^4.4.1",
     "karma-firefox-launcher": "^1.2.0",
